--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
 	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build",
+	"deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -26,5 +26,5 @@
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
   },
-  "homepage": "http://ybai17.github.io/test-vite-react",
+  "homepage": "https://ybai17.github.io/test-vite-react"
 }
