updated run and deploy configs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "test-vite-react",
+  "name": "react-balloon-game",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://ybai17.github.io/react-balloon-game",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +28,5 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
-  },
-  "homepage": "https://ybai17.github.io/test-vite-react"
+  }
 }
